RESOLVED FIXED 220867
DisplayList::Replayer should stop replay and inform clients after encountering an invalid item
https://bugs.webkit.org/show_bug.cgi?id=220867
Summary DisplayList::Replayer should stop replay and inform clients after encounterin...
Wenson Hsieh
Reported 2021-01-22 10:15:35 PST
WIP for #219097.
Attachments
Patch (18.39 KB, patch)
2021-01-22 10:54 PST, Wenson Hsieh
cdumez: review+
Patch for landing (18.38 KB, patch)
2021-01-22 12:10 PST, Wenson Hsieh
ews-feeder: commit-queue-
Wenson Hsieh
Comment 1 2021-01-22 10:54:18 PST
Chris Dumez
Comment 2 2021-01-22 11:58:00 PST
Comment on attachment 418157 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=418157&action=review > Source/WebCore/platform/graphics/displaylists/DisplayList.h:129 > + m_isValid ? Optional<ItemHandle> {{ m_currentBufferForItem }} : WTF::nullopt, nit: makeOptional() may look nicer. > Tools/TestWebKitAPI/Tests/WebCore/cg/DisplayListTestsCG.cpp:42 > +static constexpr CGFloat contextWidth = 100; static is not needed since global & const. > Tools/TestWebKitAPI/Tests/WebCore/cg/DisplayListTestsCG.cpp:43 > +static constexpr CGFloat contextHeight = 100; ditto.
Wenson Hsieh
Comment 3 2021-01-22 12:06:26 PST
Comment on attachment 418157 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=418157&action=review Thanks for the review! >> Source/WebCore/platform/graphics/displaylists/DisplayList.h:129 >> + m_isValid ? Optional<ItemHandle> {{ m_currentBufferForItem }} : WTF::nullopt, > > nit: makeOptional() may look nicer. Changed to use makeOptional(). >> Tools/TestWebKitAPI/Tests/WebCore/cg/DisplayListTestsCG.cpp:42 >> +static constexpr CGFloat contextWidth = 100; > > static is not needed since global & const. Removed the static. >> Tools/TestWebKitAPI/Tests/WebCore/cg/DisplayListTestsCG.cpp:43 >> +static constexpr CGFloat contextHeight = 100; > > ditto. 👍🏻
Wenson Hsieh
Comment 4 2021-01-22 12:10:00 PST
Created attachment 418168 [details] Patch for landing
EWS
Comment 5 2021-01-22 12:37:50 PST
commit-queue failed to commit attachment 418168 [details] to WebKit repository.
Wenson Hsieh
Comment 6 2021-01-22 12:40:28 PST
Radar WebKit Bug Importer
Comment 7 2021-01-22 12:41:13 PST
Note You need to log in before you can comment on or make changes to this bug.