DisplayList::Replayer should stop replay and inform clients after encountering an invalid item https://bugs.webkit.org/show_bug.cgi?id=220867

Reviewed by Chris Dumez.

Source/WebCore:

Make the `DisplayList` item iterator emit `Optional<ItemHandle>` instead of just `ItemHandle`; in the case of
client decoding or item validation failures (see #220710), this item handle will be `WTF::nullopt`. The display
list replayer will then handle this by halting replay with `StopReplayReason::InvalidItem`.

This refactoring will eventually enable `RemoteRenderingBackend` (in the GPU process) to terminate the web
content process when we fail to decode a display list item during playback (or encounter an invalid inline
item).

Test:   DisplayListTests.InlineItemValidationFailure
        DisplayListTests.OutOfLineItemDecodingFailure

* platform/graphics/displaylists/DisplayList.cpp:
(WebCore::DisplayList::DisplayList::asText const):
(WebCore::DisplayList::DisplayList::dump const):
(WebCore::DisplayList::DisplayList::iterator::atEnd const):
(WebCore::DisplayList::DisplayList::iterator::updateCurrentItem):

Add an `m_isValid` flag. This flag is set to `true` initially, and is only set to `false` when we encounter an
item that is either invalid or unable to be decoded. Additionally, remove release assertions and the FIXMEs
regarding handling item decoding failures.

* platform/graphics/displaylists/DisplayList.h:
(WebCore::DisplayList::DisplayList::iterator::operator* const):

If the `m_isValid` flag above is set, return `WTF::nullopt` for the item handle.

* platform/graphics/displaylists/DisplayListReplayer.cpp:
(WebCore::DisplayList::Replayer::replay):
* platform/graphics/displaylists/DisplayListReplayer.h:

Rename `DecodingFailure` to `InvalidItem`, since it now applies to both items that are invalid (e.g. contain
identifier values of 0 when they shouldn't) as well as items that fail decoding (which, in the case of the GPU
process, corresponds to IPC decoding failures).

Tools:

* TestWebKitAPI/Tests/WebCore/DisplayListTests.cpp:

Adjust a few API tests, since the item handle in the `DisplayList` iterator is now optional.

* TestWebKitAPI/Tests/WebCore/cg/DisplayListTestsCG.cpp:

Add a couple of new API tests to exercise display list item decoding and validation failures.

Canonical link: https://commits.webkit.org/233264@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@271757 268f45cc-cd09-0410-ab3c-d52691b4dbfc